@@ -28,6 +28,11 @@
 
 void *__lzma_wrap_alloc(void *unused, size_t size) { 
     unused = unused;
+    if(!size || size > CLI_MAX_ALLOCATION) {
+	cli_dbgmsg("lzma_wrap_alloc(): Attempt to allocate %lu bytes.\n", (unsigned long int) size);
+	return NULL;
+    }
+
     return cli_malloc(size);
 }
 void __lzma_wrap_free(void *unused, void *freeme) {
