@@ -1,3 +1,7 @@
+Thu Jul 14 12:07:04 CEST 2011 (acab)
+------------------------------------
+ * libclamav/lzma_iface.c: shut up huge alloc warns for 7z/lzma (bb#2913)
+
 Thu Jun  9 09:10:49 CEST 2011 (tk)
 ----------------------------------
  * V 0.97.1
